--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "prop-types": "15.7.2",
+    "draft-js": "^0.10.5",
+    "draft-js-multidecorators": "https://github.com/shivenj/draft-js-multidecorators"
   },
   "scripts": {
     "start": "react-scripts start",
