--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "draft-js": "^0.10.5",
     "draft-js-multidecorators": "https://github.com/shivenj/draft-js-multidecorators"
   },
+  "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
