--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "draft-js": "^0.10.5",
     "draft-js-multidecorators": "https://github.com/shivenj/draft-js-multidecorators"
   },
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
